--- a/client/module/ux/style/index.less
+++ b/client/module/ux/style/index.less
@@ -6,5 +6,10 @@
   video {
     width: 100%;
     max-height: 500px;
+
+    &::-webkit-media-controls-panel {
+      display: flex !important;
+      opacity: 1 !important;
+    }
   }
 }
