--- a/client/module/ux/style/index.less
+++ b/client/module/ux/style/index.less
@@ -1,15 +1,35 @@
 .root-app > .application.ux .content.record-detail {
-  .video {
-    width: 100%;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+
+  .ctrl {
+    display: flex;
+
+    > hs-button,
+    > hs-checkbox {
+      margin-right: 8px;
+    }
   }
 
-  video {
+  .video {
     width: 100%;
-    max-height: 500px;
+    height: 100px;
+    flex: 1;
+    position: relative;
 
-    &::-webkit-media-controls-panel {
-      display: flex !important;
-      opacity: 1 !important;
+    video,
+    > .mouse,
+    canvas {
+      position: absolute;
+      left: 0;
+      top: 0;
+    }
+
+    video,
+    canvas {
+      width: 100%;
+      height: 100%;
     }
   }
 }
